tests/errors/syntax_errors/import_star.py
from ex1 import *

print(a)
